--- a/static/index.html
+++ b/static/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+    <link href="./style.css" rel="stylesheet">
     <title>React Review Workshop</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="center"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
